--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: Checkout Docker configs
         run: |
